fix: :bug: position

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <title>Live2D API feat. MyGO!!!!! Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/left.css" />
   <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
   <style>
     #github svg {
@@ -44,7 +43,7 @@
         fill="currentColor" class="octo-body"></path>
     </svg>
   </a>
-  <script src="./autoload.js"></script>
+  <script src="./autoload.js?width_limit=0"></script>
 </body>
 
 </html>
