--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Live2D API feat. MyGO!!!!! Demo</title>
+  <title>Live2D Widget feat. MyGO!!!!! Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
   <style>
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <a id="github" href="https://github.com/panxuc/live2d-api-mygo" target="_blank"
+  <a id="github" href="https://github.com/panxuc/live2d-widget-mygo" target="_blank"
     title="Visit the open-source code on GitHub!" rel="noopener">
     <svg viewBox="0 0 250 250" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
@@ -43,7 +43,7 @@
         fill="currentColor" class="octo-body"></path>
     </svg>
   </a>
-  <script src="https://cdn.jsdelivr.net/gh/panxuc/live2d-api-mygo@latest/autoload.js?width_limit=0"></script>
+  <script src="https://cdn.jsdelivr.net/gh/panxuc/live2d-widget-mygo@latest/autoload.js?width_limit=0"></script>
 </body>
 
 </html>
